Make instructions and output Windows-friendly